MAPREDUCE-7341. manifest committer testing for gcs
* building against spark-3.3.0-SNAPSHOT and hadoop and gcs trunks
* moves to updated scala compiler to stay in sync with
the version I'm adding in SPARK-38394.